Bug 85848 - tiled rendering: Calc tiled rendering broken
Summary: tiled rendering: Calc tiled rendering broken
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Android Viewer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard:
Keywords:
Depends on:
Blocks: mabAndroid
  Show dependency treegraph
 
Reported: 2014-11-04 10:18 UTC by Jan Holesovsky
Modified: 2015-04-20 08:15 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jan Holesovsky 2014-11-04 10:18:15 UTC
The Calc tiled rendering is not yet finished, and behaves problematically with most of the documents; for example it shows the content of the cells, but with the next re-render, the cells become empty.

It is also not merged to master yet, only lives in a branch...

Documents that show these problems are:

https://bugs.freedesktop.org/attachment.cgi?id=39898
https://bugs.freedesktop.org/attachment.cgi?id=40895
https://bugs.freedesktop.org/attachment.cgi?id=44570
Comment 1 Jan Holesovsky 2015-04-20 08:15:11 UTC
Calc tiled rendering improved a lot, setting to FIXED.  Further problems should be reported case-by-case,