sc tiled rendering: tdf#85848: Use DrawContent() in PaintTile() too.

From now on, the code for the tiled rendering is shared with the desktop
rendering, modulo few isTiledRendering() calls.

Drawing of the shapes & charts needs fixing, it does not honor the
output device settings.

Change-Id: I74cdb4e09da59aa71f31b18130829de28a93fab4